修复终审报告全部29项问题（P0×7 + P1×13 + P2×9）
P0 安全/可靠性修复：
- MergeSpec: 添加标识符转义防止SQL注入（PostgreSQL双引号/MySQL反引号）
- ProjectionSpec: 添加withTenantFilter()和withSoftDeleteFilter()安全过滤器
- EncryptConverter: 支持可配置盐值(MYJPA_ENCRYPT_SALT)、ASCII密钥检测警告、异常信息脱敏
- SoftDeleteJpaRepository.findById(): 修复TOCTOU竞态，使用Specification原子查询
- OptimisticLockRetryAdvisor: 添加ObjectOptimisticLockingFailureException捕获
- TenantContext/SoftDeleteContext: 添加ThreadLocal安全上限(MAX_IGNORE_COUNT=64)

P1 性能/质量优化：
- QueryCacheManager: 替换为LinkedHashMap+ReadWriteLock实现真正LRU驱逐
- ConditionBuilder: 白名单强制执行(默认阻断)、可变线程安全集合
- SqlSlowQueryInterceptor: 扩展SQL脱敏规则、代理类缓存
- MyJpaTemplate: 批量执行无限循环保护(MAX_BATCH_ITERATIONS=10000)
- ProjectionSpec: 分页distinct一致性、try-finally缓存清理
- SoftDeleteHelper: 移除不支持类型的静默回退

P2 功能增强：
- EntityClassResolver: 哨兵值替代null缓存
- TenantProvider: @NonNull注解
- CodeEnumType: isEnum()安全检查
- MergeSpec: InaccessibleObjectException捕获、线程安全文档

构建验证：853测试全通过，SpotBugs 0 bugs，JaCoCo覆盖率达标